--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -293,6 +293,7 @@ global without sharing virtual class Rollup {
   }
 
   protected RollupSObjectUpdater getDML() {
+    DML.addRollupControl(this.rollupControl);
     return DML;
   }
 
@@ -1599,7 +1600,7 @@ global without sharing virtual class Rollup {
     Boolean hasExceededQueryRowLimit = control?.MaxLookupRowsBeforeBatching__c < Limits.getQueryRows();
     Boolean hasExceededHeapSizeLimit = (Limits.getLimitHeapSize() / 2) < Limits.getHeapSize();
     Boolean hasExceededDMLRowLimit = control?.MaxParentRowsUpdatedAtOnce__c < Limits.getDmlRows();
-    Integer intervalTillTimeout = (System.isBatch() || System.isQueueable()) ? 10000 : 3000;
+    Integer intervalTillTimeout = (System.isBatch() || System.isQueueable()) ? 14000 : 3000;
     Boolean hasExceededCPUTimeLimit = Limits.getLimitCpuTime() - intervalTillTimeout < Limits.getCpuTime();
     Boolean hasExceededLimits =
       hasExceededQueryNumberLimit ||
