--- a/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
+++ b/rollup/core/classes/RollupFlowFullRecalcDispatcher.cls
@@ -11,14 +11,17 @@ global without sharing class RollupFlowFullRecalcDispatcher {
   @InvocableMethod(category='Rollups' label='Full Recalc CMDT-driven Invocable')
   public static void performFullRecalcRollups(List<FlowInput> inputs) {
     List<Rollup__mdt> localRollupMetadata = Rollup.getMetadataFromCache(Rollup__mdt.SObjectType);
-    List<Rollup__mdt> selectedRollupMetadata = new List<Rollup__mdt>();
     Set<String> rollupDeveloperNames = new Set<String>();
     for (FlowInput input : inputs) {
+      if (String.isBlank(input.rollupDeveloperNames)) {
+        throw new IllegalArgumentException('Comma-separated list of Rollup__mdt DeveloperName(s) was not provided');
+      }
       List<String> splitListOfApiNames = input.rollupDeveloperNames.split(',');
       for (String apiName : splitListOfApiNames) {
         rollupDeveloperNames.add(apiName.trim());
       }
     }
+    List<Rollup__mdt> selectedRollupMetadata = new List<Rollup__mdt>();
     for (Rollup__mdt rollup : localRollupMetadata) {
       if (rollupDeveloperNames.contains(rollup.DeveloperName)) {
         selectedRollupMetadata.add(rollup);
