--- a/rollup/core/classes/RollupSObjectUpdater.cls
+++ b/rollup/core/classes/RollupSObjectUpdater.cls
@@ -27,6 +27,11 @@ public without sharing virtual class RollupSObjectUpdater {
   }
 
   public virtual void doUpdate(List<SObject> recordsToUpdate) {
+    if (Rollup.hasExceededCurrentRollupLimits(this.rollupControl)) {
+      this.performAsyncUpdate(recordsToUpdate);
+      return;
+    }
+    this.splitUpdates(recordsToUpdate);
     // typically I wouldn't advocate for the use of a guard clause here since an empty list
     // getting updated is a no-op, but the addition of the logging item is annoying ...
     if (recordsToUpdate.isEmpty() == false) {
@@ -104,6 +109,23 @@ public without sharing virtual class RollupSObjectUpdater {
     }
   }
 
+  private void splitUpdates(List<SObject> recordsToUpdate) {
+    if (this.rollupControl.MaxParentRowsUpdatedAtOnce__c < recordsToUpdate.size()) {
+      Integer maxIndexToRemove = recordsToUpdate.size() / 2;
+      List<SObject> asyncUpdateList = new List<SObject>();
+      while (recordsToUpdate.size() > maxIndexToRemove) {
+        asyncUpdateList.add(recordsToUpdate.remove(recordsToUpdate.size() - 1));
+      }
+      this.performAsyncUpdate(asyncUpdateList);
+    }
+  }
+
+  private void performAsyncUpdate(List<SObject> recordsToUpdate) {
+    if (Limits.getLimitQueueableJobs() > Limits.getQueueableJobs()) {
+      System.enqueueJob(new RollupAsyncSaver(recordsToUpdate, this.rollupControl));
+    }
+  }
+
   private class SObjectSorter extends RollupComparer {
     public override Integer compare(Object first, Object second) {
       Integer returnVal = 0;
@@ -117,6 +139,21 @@ public without sharing virtual class RollupSObjectUpdater {
         }
       }
       return returnVal;
+    }
+  }
+
+  private class RollupAsyncSaver implements System.Queueable {
+    private final List<SObject> records;
+    private final RollupControl__mdt control;
+    public RollupAsyncSaver(List<SObject> records, RollupControl__mdt control) {
+      this.records = records;
+      this.control = control;
+    }
+
+    public void execute(QueueableContext context) {
+      RollupSObjectUpdater updater = new RollupSObjectUpdater();
+      updater.addRollupControl(this.control);
+      new RollupSObjectUpdater().doUpdate(this.records);
     }
   }
 }
